--- a/config.toml
+++ b/config.toml
@@ -9,7 +9,7 @@ title = "Communicating with R Markdown"
 
 # The URL of your site.
 # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
-baseurl = "https://ita-rmarkdown.netlify.com/"
+baseurl = "https://ita-rmarkdown.netlify.app/"
 
 # Enter a copyright notice to display in the site footer.
 # To display a copyright symbol, type `&copy;`. For current year, type `{year}`.
